[project]
name = "excel-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.27.0",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "xlwings>=0.35.0",
]
